--- a/src/main/resources/static/assets/admin/layout/sidebar.html
+++ b/src/main/resources/static/assets/admin/layout/sidebar.html
@@ -43,11 +43,10 @@
 		<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
 			<div class="bg-white py-2 collapse-inner rounded">
 				<h6 class="collapse-header">CRUD:</h6>
-				<a class="collapse-item" href="#order">Order Confirm</a>
-				<a class="collapse-item" href="#waitingForShipping">Waiting for shipping</a>
-				<a class="collapse-item" href="#delivered">Delivered</a>
-				<a class="collapse-item" href="#cancelled">Cancelled</a>
-				<a class="collapse-item" href="">Order Detail</a>
+				<a class="collapse-item" href="#order_Confirm">Order Confirm</a>
+				<a class="collapse-item" href="#order_Shipping">Waiting for shipping</a>
+				<a class="collapse-item" href="#order_Success">Delivered</a>
+				<a class="collapse-item" href="#order_Cancel">Cancelled</a>
 			</div>
 		</div>
 	</li>
