--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -107,10 +107,18 @@
 	    <script src="/assets/admin/js/product.js"></script>
 	    <script src="/assets/admin/js/favourite.js"></script>
 	    <script src="/assets/admin/js/inventory-management.js"></script>
-	    <script src="/assets/admin/js/order.js"></script>
-	    <script src="/assets/admin/js/waitingForShipping.js"></script>
-	    <script src="/assets/admin/js/delivered.js"></script>
-	    <script src="/assets/admin/js/cancelled.js"></script>
+	    <script src="/assets/admin/js/order_Confirm.js"></script>
+	    <script src="/assets/admin/js/order_Shipping.js"></script>
+	    <script src="/assets/admin/js/order_Success.js"></script>
+	    <script src="/assets/admin/js/order_Cancel.js"></script>
 	    <script src="/assets/admin/js/authority-ctrl.js"></script>
+	    
+	    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+		    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
+		  </script>
+		
+		  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
+		    integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
+		  </script>
 	</body>
 </html>
