--- a/src/main/resources/static/assets/admin/layout/topbar.html
+++ b/src/main/resources/static/assets/admin/layout/topbar.html
@@ -5,7 +5,7 @@
 
 <div>
 	<ul class="navbar-nav ml-auto">
-		<li class="nav-item dropdown no-arrow"><a href="/home/index" style="text-decoration: none">Home</a></li>
+		<li class="nav-item dropdown no-arrow"><a href="/index" style="text-decoration: none">Home</a></li>
 	</ul>
 </div>
 
