--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -16,7 +16,7 @@
 	    
 	    <!-- Custom styles for this template-->
 	    <link href="/assets/admin/css/sb-admin-2.min.css" rel="stylesheet">
-	    
+	    <link rel="stylesheet" href="/assets/admin/css/dashboard.css">
 	    <!-- Link AngularJs framework -->
 	    <script src="/assets/admin/js/angular.min.js"></script>
 	    <script src="/assets/admin/js/angular-route.js"></script>
@@ -102,23 +102,17 @@
 	    <!-- Custom scripts for all pages-->
 	    <script src="/assets/admin/js/sb-admin-2.min.js"></script>
 	    
+	    
 	    <script src="/assets/admin/js/webapp.js"></script>
 	    <script src="/assets/admin/js/category.js"></script>
 	    <script src="/assets/admin/js/product.js"></script>
 	    <script src="/assets/admin/js/favourite.js"></script>
 	    <script src="/assets/admin/js/inventory-management.js"></script>
-	    <script src="/assets/admin/js/order_Confirm.js"></script>
-	    <script src="/assets/admin/js/order_Shipping.js"></script>
-	    <script src="/assets/admin/js/order_Success.js"></script>
-	    <script src="/assets/admin/js/order_Cancel.js"></script>
+	    <script src="/assets/admin/js/order.js"></script>
+	    <script src="/assets/admin/js/waitingForShipping.js"></script>
+	    <script src="/assets/admin/js/delivered.js"></script>
+	    <script src="/assets/admin/js/cancelled.js"></script>
+	    <script src="/assets/admin/js/dashboard.js"></script>
 	    <script src="/assets/admin/js/authority-ctrl.js"></script>
-	    
-	    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-		    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
-		  </script>
-		
-		  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
-		    integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
-		  </script>
 	</body>
 </html>
