--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -112,6 +112,7 @@
 	    <script src="/assets/admin/js/order_Success.js"></script>
 	    <script src="/assets/admin/js/order_Cancel.js"></script>
 	    <script src="/assets/admin/js/authority-ctrl.js"></script>
+	    <script src="/assets/admin/js/dashboard.js"></script>
 	    
 	    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
 		    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
