--- a/src/main/resources/templates/user/cart/view.html
+++ b/src/main/resources/templates/user/cart/view.html
@@ -97,7 +97,7 @@
 	                    <div class="shoping__checkout">
 	                        <h5>Cart Total</h5>
 	                        <ul>
-								<li>Discount <span th:text="${discount.price}" id="discount"><span style="text-decoration: underline;">đ</span></span></li>
+								<li>Discount <span style="text-decoration: underline;">đ</span> <span th:text="${#numbers.formatDecimal(discount.price, 0, 'POINT', 0, 'POINT')}" id="discount"></span></li>
 	                            <li>Total <span>{{getTotal()|number}}&nbsp<span style="text-decoration: underline;">đ</span></span></li>
 	                        </ul>
 	                        <a type="button" class="primary-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">PROCEED TO CHECKOUT</a>
