--- a/src/main/resources/templates/user/order/checkout.html
+++ b/src/main/resources/templates/user/order/checkout.html
@@ -38,7 +38,7 @@
 								<li>{{item.name}}<span>{{item.price*item.qty|number}}&nbsp;<span style="text-decoration: underline;">đ</span></span></li>
 							</ul>
 							<div class="checkout__order__subtotal">
-								Discount <span th:text="${discount.price}"><span style="text-decoration: underline;">đ</span></span>
+								Discount <span style="text-decoration: underline;">đ</span> <span th:text="${#numbers.formatDecimal(discount.price, 0, 'POINT', 0, 'POINT')}"></span>
 							</div>
 							<div class="checkout__order__total">
 								Tổng Thanh Toán <span>{{(getTotal() - discount.price)|number}}&nbsp;<span style="text-decoration: underline;">đ</span></span>
