--- a/src/main/resources/static/assets/css/style_login.css
+++ b/src/main/resources/static/assets/css/style_login.css
@@ -144,7 +144,7 @@ form {
     justify-content: center;
     flex-direction: column;
     padding: 0 50px;
-    height: 100% ;
+    height: 90% ;
     text-align: center;
 }
 
@@ -320,6 +320,13 @@ input {
   margin-top: -10px;
 }
 
+.success-message-register,
+#success-message {
+  color: green;
+  font-size: 14px;
+  margin-top: -10px;
+}
+
 
 
 .loading-overlay {
@@ -335,6 +342,16 @@ input {
     align-items: center;
 }
 
+.loading-success {
+    /* Thêm phần chỉnh sửa màu sắc cho biểu tượng check */
+    color: green;
+}
+
+.loading-failure {
+    /* Thêm phần chỉnh sửa màu sắc cho biểu tượng X */
+    color: red;
+}
+
 .loading-spinner {
     border: 4px solid rgba(0, 0, 0, 0.3);
     border-top: 4px solid #3498db;
@@ -342,6 +359,8 @@ input {
     width: 40px;
     height: 40px;
     animation: spin 2s linear infinite;
+     color: #3498db;
+    font-size: 24px;
 }
 
 @keyframes spin {
