--- a/src/main/resources/static/assets/css/style_login.css
+++ b/src/main/resources/static/assets/css/style_login.css
@@ -144,7 +144,17 @@ form {
     justify-content: center;
     flex-direction: column;
     padding: 0 50px;
-    height: 90% ;
+    text-align: center;
+}
+
+#login-form{
+	background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 50px;
+    height: 100%;
     text-align: center;
 }
 
@@ -163,9 +173,9 @@ input {
     box-shadow: 0 14px 28px rgba(0, 0,0, 0.25),0 10px 10px rgba(0, 0, 0, 0.22);
     position: relative;
     overflow: hidden;
-    width: 900px;
+    width: 1000px;
     max-width: 100%;
-    min-height: 580px;
+    min-height: 660px;
 }
 
 .form-container{
