--- a/src/main/resources/static/assets/admin/layout/account.html
+++ b/src/main/resources/static/assets/admin/layout/account.html
@@ -30,6 +30,14 @@
 				</div>
 				<form name="myForm">
 				<div class="card-body row">
+					<div class="form-group col-md-6 text-center" style="align-items: center; display: flex;">
+						<label for="image" style="margin: 0;width: 170px; height: 160px;">
+							<img ng-src="{{'/assets/img/user/' + form.photo}}" style="width: 100%;height:100%" />
+						</label>
+					</div>
+					<div class="form-group col-md-6" style="align-items: center; display: flex;">
+						
+					</div>
 					<div class="form-group col-md-6">
 						<label for="title">Username</label>
 						<input ng-model="form.username" class="form-control">
@@ -55,20 +63,20 @@
 						<input ng-model="form.email" class="form-control">
 						<div class="errPrice" style='color: red;' ></div>
 					</div>
-
+					<div class="form-group col-md-6" style="margin-bottom: 40px;">
+						<label for="title">Phone</label>
+						<input ng-model="form.phone" class="form-control">
+						<div class="errPrice" style='color: red;' ></div>
+					</div>
 					<div class="form-group col-md-6">
-					<label for="title">Image</label>
-					<div class="custom-file mb-4">
-                    	<label for="image" class="custom-file-label">{{form.photo}}</label>
-                        <input onchange="angular.element(this).scope().imageChanged(this.files)" id="image" type="file" class="form-control ">
-                        
-                    </div>							
+						<label for="title">Image</label>
+						<div class="custom-file mb-4">
+	                    	<label for="image" class="custom-file-label">{{form.photo}}</label>
+	                        <input onchange="angular.element(this).scope().imageChanged(this.files)" id="image" type="file" class="form-control ">
+	                        
+	                    </div>							
 					</div>
-					<div class="form-group col-md-6 text-center" style="align-items: center; display: flex;">
-						<label for="image" style="margin: 0;width: 170px; height: 160px;">
-							<img ng-src="{{'/assets/img/user/' + form.photo}}" style="width: 100%;height:100%" />
-						</label>
-					</div>
+					
 				</div>
 				<div class="card-footer">
 					<button ng-click="create()" class="btn btn-success btn-sm">Insert</button>
@@ -113,6 +121,7 @@
 								<th>Password</th>
 								<th>Fullname</th>
 								<th>Email</th>
+								<th>Phone</th>
 								<th>Photo</th>
 							</tr>
 						</thead>
@@ -122,6 +131,7 @@
 								<td >{{account.password}}</td>
 								<td >{{account.fullname}}</td>
 								<td >{{account.email}}</td>
+								<td >{{account.phone}}</td>
 								<td >{{account.photo}}</td>
 								<td>
 									<button ng-click="edit(account.username)" class="btn btn-light btn-sm">Edit</button>
