--- a/src/main/resources/templates/user/layout/header.html
+++ b/src/main/resources/templates/user/layout/header.html
@@ -47,7 +47,7 @@
 									<li><a data-bs-toggle="modal" data-bs-target="#profileModal" style="cursor: pointer;">Thông Tin Đăng Nhập</a></li>
 									<li
 										th:if="${#request.isUserInRole('DIRE') or #request.isUserInRole('STAF')}">
-										<a href="#">Trang Quản Trị</a>
+										<a th:href="@{/admin/index}">Trang Quản Trị</a>
 									</li>
 									<li><a th:href="@{/security/logoff}">Đăng Xuất</a></li>
 								</th:block>
