--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -8,7 +8,7 @@
                 <input type="file" id="profile-picture" onchange="angular.element(this).scope().imageChanged(this.files)">
             </div>
         </div>
-        <div class="col-md-9">
+        <div class="col-md-5 border-right">
             <div class="p-3 py-5">
                 <div class="d-flex justify-content-between align-items-center mb-3">
                     <h4 class="text-right">Thông Tin</h4>
@@ -18,8 +18,19 @@
                     <div class="col-md-12 mb-2"><label class="labels">Email</label><input ng-model="form.email" type="text" class="form-control" value=""></div>
                     <div class="col-md-12 mb-2"><label class="labels">Số Điện Thoại</label><input ng-model="form.phone" type="text" class="form-control" value=""></div> 
                 </div>
-                <div class="mt-5 text-center"><button ng-click="update()" class="btn btn-primary profile-button" type="button">Save Profile</button></div>
+                
             </div>
+        </div>
+        <div class="col-md-4">
+			    <div class="p-3 py-5">
+			        <div class="d-flex justify-content-between align-items-center experience" style="font-size: 27px;"><span>Bảo Mật</span></div><br>
+			        <div class="col-md-12"><label class="labels">Mật khẩu mới</label><input ng-model="passwordData.newPassword" type="password" class="form-control" value=""></div> <br>
+			        <div class="col-md-12"><label class="labels">Nhập lại mật khẩu</label><input ng-model="passwordData.confirmPassword" type="password" class="form-control" value=""></div>
+			        <div class="mt-3 text-center"><button ng-click="changePassword()" class="btn btn-primary profile-button" type="button">Đổi Mật Khẩu</button></div>
+			    </div>
+			</div>
+        <div class="col-md-12 mt-5 text-center"> <!-- Chuyển col-md-4 thành col-md-12 ở đây -->
+            <button ng-click="update()" class="btn btn-primary profile-button" type="button">Save Profile</button>
         </div>
     </div>
 </div>
